[gd_scene load_steps=3 format=3 uid="uid://bxseaypr18s7"]

[ext_resource type="Script" uid="uid://bcrt6qeyjpprs" path="res://scripts/pause_menu.gd" id="1_0lmf7"]
[ext_resource type="Theme" uid="uid://cmgmaecxmtlil" path="res://scenes/ui/themes/man_theme.tres" id="1_6tw0m"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0lmf7")
main_menu_path = "uid://c3fwrnvjgaqt2"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.380392)

[node name="PanelContainer" type="PanelContainer" parent="Control"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -114.5
offset_right = 150.0
offset_bottom = 114.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6tw0m")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme = ExtResource("1_6tw0m")

[node name="ResumeBtn" type="Button" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_6tw0m")
text = "Resume"

[node name="MainMenuBtn" type="Button" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_6tw0m")
text = "Quit To Main menu"

[node name="QuitBtn" type="Button" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_6tw0m")
text = "Quit to Desktop"

[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/MainMenuBtn" to="." method="_on_main_menu_btn_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
